--- a/_posts/2014-05-31-newblog.md
+++ b/_posts/2014-05-31-newblog.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: New Blog?
+title: "New Blog"
+comments: true
 ---
 
 Today I decided to migrate my blogging from eBlogger to Github. Been looking at doing this for a while and 
