--- a/_posts/2014-06-01-newblog.md
+++ b/_posts/2014-06-01-newblog.md
@@ -30,3 +30,5 @@ too once you get the hang of it). Hopefully these static webpages will
 work for what I have in mind because down the line if I ever have to 
 use dynamic content that can't be hosted on Github then I'm not sure 
 the switch from Github to whatever will be as smooth.
+
+{% include twitter_plug.html %}
