--- a/_posts/2014-06-01-newblog.md
+++ b/_posts/2014-06-01-newblog.md
@@ -10,23 +10,23 @@ move ahead with the plans after reading up on Jekyll and
 general programming formats that I needed to learn 
 (trust me, it's quite a lot!) What tipped my mind to finally 
 do it was the fact that I was paying close to $50 for hosting 
-that I didn't use to it's full potential.
+that I didn't use to its full potential.
 
 Some of the big things people consider when switching to a new 
 'host' is ability to import posts and allowing comments - both 
-I honestly didn't care very much for due to the fact that the 
-main aim of this blog/website is to have a 'running commentary' 
+I honestly didn't care very much for because the 
+main aim of this blog is to have a 'running commentary' 
 of what I do during university, post-graduation and what my aims 
 for the future are. Comments would be useful, but it wasn't high 
 up on my priority list, nor were older posts from eBlogger - most of 
-those were me just raginging at how tough my Signal Processing 
+those were me just raging at how tough my Signal Processing 
 module at university was, or the fact that my final project turned 
-out to be a lot grander in scale than I had originally planned.
+out to be a lot bigger in scale than I had originally planned.
 
-All this chitter chatter aside, I have finally decided to go ahead 
+All this chit-chat aside, I have finally decided to go ahead 
 and start using Jekyll blogging + Github hosting to make my life that 
 much easier and get basic programming knowledge (and it's quite easy 
-too once you get the hang of it). Hopefully these static webpages will 
+too once you get the hang of it). Hopefully these static web-pages will 
 work for what I have in mind because down the line if I ever have to 
 use dynamic content that can't be hosted on Github then I'm not sure 
 the switch from Github to whatever will be as smooth.
